--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 # Authors
 
 Julius Garbe:
-  name        : "Julius Garbe"
-  uri         : "https://www.pik-potsdam.de/members/garbe/"
-  email       : "julius.garbe@pik-potsdam.de"
+  name        : "Hillary Scannell"
+  uri         : "https://ocean-transport.github.io/people.html"
+  email       : "hs3277@columbia.edu"
   bio         : #""
-  avatar      : "bio-photo.jpg"
-  twitter     : "juliusgarbe"
+  avatar      : "profile.png"
+  twitter     : "HillaryScannell"
   google_plus : #"Name"
 
 # Name2 Name2:
