--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,15 @@
 # main links links
 main:
-  - title: "RESEARCH"
+  - title: "Research"
     url: /research/
 
-  - title: "PUBLICATIONS"
+  - title: "Software"
+    url: /software/
+    
+  - title: "Publications"
     url: /publications/
 
-  - title: "OUTREACH"
-    url: /outreach/
+  
 
   # - title: "Portfolio"
   #   url: /portfolio/
