--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 Julius Garbe:
-  name        : "Hillary Scannell"
+  name        : "Hillary Scannell, PhD"
   uri         : "https://ocean-transport.github.io/people.html"
   email       : "hs3277@columbia.edu"
   bio         : #""
