--- a/_config.yml
+++ b/_config.yml
@@ -179,12 +179,12 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  theses:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+#   theses:
+#     output: true
+#     permalink: /:collection/:path/
+#   talks:
+#     output: true
+#     permalink: /:collection/:path/
 
 
 # Defaults
