--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 # Authors
 
-Julius Garbe:
+Hillary Scannell:
   name        : "Hillary Scannell, PhD"
   uri         : "https://ocean-transport.github.io/people.html"
   email       : "hs3277@columbia.edu"
@@ -8,11 +8,3 @@ Julius Garbe:
   avatar      : "profile.png"
   twitter     : "HillaryScannell"
   google_plus : #"Name"
-
-# Name2 Name2:
-#   name        : "Name2 Name2"
-#   email       : "name2@name2.com"
-#   bio         : "I ordered what?"
-#   avatar      : "bio-photo.jpg"
-#   twitter     : "name2"
-#   google_plus : "Name"
