--- a/_config.yml
+++ b/_config.yml
@@ -260,18 +260,18 @@ timezone: America/New_York # http://en.wikipedia.org/wiki/List_of_tz_database_ti
 # Plugins
 plugins:
   - jekyll-paginate
-#   - jekyll-sitemap
+  - jekyll-sitemap
   - jekyll-gist
-#   - jekyll-feed
+  - jekyll-feed
   - jekyll-redirect-from
   #- jekyll-include-cache
   #- jekyll-pdf
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
-#   - jekyll-sitemap
+  - jekyll-sitemap
   - jekyll-gist
-#   - jekyll-feed
+  - jekyll-feed
   - jemoji
 
 
