--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "HILLARY A. SCANNELL" # site title
 title_separator          : "&#124;"
 name                     : &name "Hillary Scannell, PhD"
 description              : &description "Postdoctoral Research Scientist" # used predominantly in meta descriptions for improving SEO
-url                      : "hillaryscannell.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "http://hillaryscannell.com/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hscannell/hscannell.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
