--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   location         : "Palisades, New York"
   employer         : "Columbia University"
   googlescholar    : "https://scholar.google.com/citations?user=dcS9xykAAAAJ&hl=en"
-  email            : "hs3277@columbia.edu"
+  email            : "scannell@ldeo.columbia.edu"
   researchgate     : "https://www.researchgate.net/profile/Hillary_Scannell"
   uri              : "https://ocean-transport.github.io/people.html"
   bitbucket        :
