--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Hillary Scannell:
   name        : "Hillary Scannell, PhD"
   uri         : "https://ocean-transport.github.io/people.html"
-  email       : "hs3277@columbia.edu"
+  email       : "scannell@ldeo.columbia.edu"
   bio         : #""
   avatar      : "profile.png"
   twitter     : "HillaryScannell"
