--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   bio              : "Postdoctoral Research Scientist at the Lamont-Doherty Earth Observatory" # sidebar bio
   location         : "Palisades, New York"
   employer         : "Columbia University"
-  googlescholar    : "https://scholar.google.com/citations?user=dcS9xykAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=ROnC2wcAAAAJ&hl=en&oi=ao"
   email            : "scannell@ldeo.columbia.edu"
   researchgate     : "https://www.researchgate.net/profile/Hillary_Scannell"
   uri              : "https://ocean-transport.github.io/people.html"
